--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Weather API
-WEATHER_API_BASE_URL="http://api.weatherapi.com/v1"
-WEATHER_API_KEY=
+VITE_WEATHER_API_BASE_URL="http://api.weatherapi.com/v1"
+VITE_WEATHER_API_KEY=
 
-UNSPLASH_ACCESS_KEY=""
+VITE_UNSPLASH_ACCESS_KEY=""
